only use a result if it's non-null